--- a/src/app/pages/dragonball-super/dragonball-super-page.html
+++ b/src/app/pages/dragonball-super/dragonball-super-page.html
@@ -3,10 +3,10 @@
 
 <section class="row">
   <div class="col-12 col-sm-6">
-    <dragonball-character-add (newCharacter)="addCharacter($event)" />
+    <dragonball-character-add (newCharacter)="dragonballService.addCharacter($event)" />
   </div>
 
   <div class="col-12 col-sm-6">
-    <dragonball-character-list listName="Listado de Personajes" [characters]="characters()" />
+    <dragonball-character-list listName="Listado de Personajes" [characters]="dragonballService.characters()" />
   </div>
 </section>
